<?xml version="1.0"?>
<!-- Full information here http://wiki.ros.org/catkin/package.xml -->
<package format="2">
  <name>simple_shapes</name>
  <version>0.1.0</version>
  <description>
    ROS package for making robot follow a regular polygon.
  </description>
  <maintainer email="anmol.chachra@gmail.com">Anmol</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>geometry_msgs</depend>
</package>
